Client Side Pages Whitespace Fixed

--- a/resources/css/client.css
+++ b/resources/css/client.css
@@ -90,6 +90,17 @@ body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+main {
+  flex-grow: 1;
+  /* Ensure main takes up all available space */
+  display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -359,6 +370,7 @@ h6 {
 # Global Footer
 --------------------------------------------------------------*/
 .footer {
+  margin-top: auto;
   color: var(--default-color);
   background-color: var(--background-color);
   font-size: 14px;
@@ -500,6 +512,7 @@ section,
   background-color: var(--background-color);
   padding: 60px 0;
   overflow: clip;
+  flex-grow: 1;
 }
 
 /*--------------------------------------------------------------
